# robot_arm_demo

./: LICENSE  README.md  ik_self_test.py  package.xml  requirements.txt  ros_simulator_connector.py  setup.py
msg/: TrajectoryCommand.msg
src/: SOARM101.py  cubic_trajectory_generation.py  publisher.py  save_trajectory_to_file.py  subscriber.py
